[package]
name = "alt-std"
version = "0.1.0"
authors = ["Wael El Oraiby <wael.eloraiby@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2.69"

# [profile]
# [profile.dev]
# overflow-checks = false
# debug-assertions = false
# panic = "abort"
# lto = true
#
# [profile.release]
# overflow-checks = false
# debug-assertions = false
# panic = "abort"
# lto = true
