[package]
name = "alt-std"
version = "0.2.6"
authors = ["Wael El Oraiby <wael.eloraiby@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Alternative Lightweight Std library for making small executables and shared objects"
repository = "https://github.com/eloraiby/alt-std"
readme = "README.md"

[dependencies]
libc = "*"

# [profile]
# [profile.dev]
# overflow-checks = false
# debug-assertions = false
# panic = "abort"
# lto = true
#
# [profile.release]
# overflow-checks = false
# debug-assertions = false
# panic = "abort"
# lto = true
